# oxidizedRAG

./: .gitignore  .local-ci.toml  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  rustfmt.toml
.githooks/: install.sh  pre-commit
benches/: graph_construction.rs  pagerank_retrieval.rs  parallel_processing.rs  server_benchmarks.rs  text_processing.rs
ci/: oxidizedrag-ci.service  runner.sh
docs/: ci.md
docs-site/: .gitignore  Dockerfile  dockworker.toml  index.html  nginx.conf.template  package.json  vite.config.ts
examples/: 01_basic_usage.rs  02_stateful_api.rs  03_builder_api.rs  04_with_ollama.rs  05_batch_processing.rs  benchmark_quality_improvements.rs  complete_zero_cost_graphrag_demo.rs  graphrag_multi_doc_server.rs  llm_hierarchical_summarization_demo.rs  multi_document_pipeline.rs  real_ollama_pipeline.rs  symposium_real_search.rs  symposium_test.rs  test_real_embeddings.rs  zero_cost_approaches_demo.rs
graphrag-aivcs/: Cargo.toml
graphrag-aivcs/examples/: integration_demo.rs  persistence_architecture.rs
graphrag-aivcs/src/: adapter.rs  aivcs_adapter.rs  config_hasher.rs  lib.rs  persistence.rs  recorder.rs  run_recorder.rs  spec.rs
graphrag-aivcs/tests/: integration.rs
graphrag-cli/: Cargo.toml  GUIDA_ITALIANA.md  README.md  USER_GUIDE.md
graphrag-cli/src/: app.rs  config.rs  explain.rs  main.rs  mode.rs  query_history.rs  theme.rs  tui.rs  workspace.rs
graphrag-cli/src/commands/: mod.rs
graphrag-cli/src/handlers/: file_ops.rs  graphrag.rs
graphrag-cli/src/ui/: spinner.rs
graphrag-cli/src/ui/components/: help_overlay.rs  info_panel.rs  mod.rs  progress.rs  query_input.rs  raw_results_viewer.rs  results_viewer.rs  status_bar.rs
graphrag-core/: Cargo.toml
graphrag-core/examples/: advanced_nlp_demo.rs  complete_zero_cost_graphrag_demo.rs  embeddings_demo.rs  embeddings_from_config.rs  hierarchical_graphrag_demo.rs  llm_evaluation_demo.rs  symposium_graphrag_rs_philosophy.rs  symposium_trait_based_chunking.rs  symposium_with_llm_query.rs  symposium_zero_cost_query.rs  tom_sawyer_workspace.rs
graphrag-core/src/: async_graphrag.rs  caching_test.rs  inference.rs  lib.rs
graphrag-core/src/api/: code_agent.rs  contracts.rs  easy.rs  handlers.rs  mod.rs  rest.rs  tests.rs
graphrag-core/src/async_processing/: concurrent_pipeline.rs  mod.rs  monitoring.rs  rate_limiting.rs
graphrag-core/src/builder/: mod.rs
graphrag-core/src/caching/: cache_config.rs  cache_key.rs  client.rs  distributed.rs  mod.rs  persistent.rs  stats.rs  warming.rs
graphrag-core/src/config/: enhancements.rs  json5_loader.rs  loader.rs  mod.rs  schema_validator.rs  setconfig.rs  validation.rs
graphrag-core/src/core/: error.rs  metadata.rs  mock_providers.rs  mod.rs  registry.rs  test_traits.rs  traits.rs
graphrag-core/src/corpus/: collection_processor.rs  document_manager.rs  entity_linker.rs  knowledge_graph.rs  mod.rs
graphrag-core/src/embeddings/: api_providers.rs  config.rs  huggingface.rs  mod.rs  neural.rs
graphrag-core/src/entity/: bidirectional_index.rs  gleaning_extractor.rs  llm_extractor.rs  llm_relationship_extractor.rs  mod.rs  prompts.rs  semantic_merging.rs  string_similarity_linker.rs
graphrag-core/src/evaluation/: mod.rs  pipeline_validation.rs
graphrag-core/src/function_calling/: agent.rs  enhanced_registry.rs  functions.rs  mod.rs  tools.rs
graphrag-core/src/generation/: async_mock_llm.rs  mock_embedder.rs  mod.rs
graphrag-core/src/graph/: analytics.rs  embeddings.rs  incremental.rs  leiden.rs  mod.rs  pagerank.rs  temporal.rs  traversal.rs
graphrag-core/src/incremental/: mod.rs
graphrag-core/src/lightrag/: concept_graph.rs  dual_retrieval.rs  graph_indexer.rs  iterative_deepening.rs  keyword_extraction.rs  lazy_pipeline.rs  mod.rs  query_refinement.rs
graphrag-core/src/monitoring/: benchmark.rs
graphrag-core/src/nlp/: custom_ner.rs  mod.rs  multilingual.rs  semantic_chunking.rs  syntax_analyzer.rs
graphrag-core/src/ollama/: mod.rs
graphrag-core/src/persistence/: lance.rs  mod.rs  parquet.rs  workspace.rs
graphrag-core/src/pipeline/: builder.rs  cached_stage.rs  data_import.rs  dual_mode_cache.rs  hashable.rs  mod.rs  persistent_cache.rs  registry.rs  stage.rs  types.rs
graphrag-core/src/query/: adaptive_routing.rs  intelligence.rs  mod.rs  optimizer.rs
graphrag-core/src/reranking/: cross_encoder.rs
graphrag-core/src/retrieval/: adaptive.rs  bm25.rs  enriched.rs  explain.rs  fusion.rs  hipporag_ppr.rs  hybrid.rs  mod.rs  pagerank_retrieval.rs
graphrag-core/src/rograg/: decomposer.rs  fuzzy_matcher.rs  intent_classifier.rs  logic_form.rs  mod.rs  processor.rs  quality_metrics.rs  streaming.rs  tests.rs  validator.rs
graphrag-core/src/storage/: async_bridge.rs  mod.rs  surrealdb.rs
graphrag-core/src/summarization/: mod.rs
graphrag-core/src/text/: analysis.rs  chunk_enricher.rs  chunking.rs  chunking_strategies.rs  document_structure.rs  extractive_summarizer.rs  keyword_extraction.rs  layout_parser.rs  mod.rs  semantic_chunking.rs
graphrag-core/src/text/parsers/: html.rs  markdown.rs
graphrag-core/src/vector/: ann_config.rs  mod.rs  voy_store.rs
graphrag-core/src/vllm/: mod.rs
graphrag-core/tests/: README.md  code_agent_tests.rs  common.rs  github_integration_tests.rs  incremental_correctness_test.rs  incremental_perf_test.rs  pipeline_caching.rs  text_pipeline_fixtures.rs  vllm_integration_tests.rs
graphrag-core/tests/fixtures/code_samples/: api_client.rs  calculator.rs  example.js  example.py  example.ts  graph_algorithms.rs
graphrag-server/: README.md
graphrag-wasm/: Cargo.toml
graphrag-wasm/examples/: gpu_embeddings_demo.rs
graphrag-wasm/src/: embedder.rs  entity_extractor.rs  gpu_embedder.rs  lib.rs  llm_provider.rs  main.rs  ollama_http.rs  onnx_embedder.rs  storage.rs  vector_search.rs  voy_bindings.rs  webgpu_check.rs  webllm.rs
graphrag-wasm/src/components/: chat_component.rs  hierarchy.rs  mod.rs  settings.rs  ui_components.rs
graphrag-wasm/tests/: end_to_end.rs  persistence_tests.rs  real_pipeline_test.rs  webgpu_tests.rs  webllm_tests.rs
scripts/: bench-compare.sh
(+62 files in other folders)
