[workspace]
members = [
    "graphrag-core",
    "graphrag-wasm",
    "graphrag-server",
    "graphrag-cli",
    "graphrag-aivcs",
]
exclude = ["examples/web-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GraphRAG-RS Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/graphrag-rs"

[workspace.dependencies]
# Core dependencies (shared across crates)
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# AIVCS - Agent Version Control System (for run tracking and evaluation)
aivcs-core = "0.2.0"
oxidized-state = "0.2.0"

# Web frameworks
# Axum (for API module and tests)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Actix-web + Apistos for OpenAPI
actix-web = { version = "4.9", features = ["macros"] }
actix-cors = "0.7"
actix-rt = "2.10"
apistos = { version = "0.6", features = ["swagger-ui"] }
apistos-schemars = { package = "apistos-schemars", version = "0.8" }
schemars = { package = "apistos-schemars", version = "0.8" }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# UI Framework
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# Vector databases
qdrant-client = "1.11"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# GPU acceleration
burn = { version = "0.18", default-features = false }
burn-wgpu = { version = "0.18", default-features = false }

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Serialization formats
toml = "0.8"
serde_yaml = "0.9"

# Graph algorithms
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
indexmap = { version = "2.0", features = ["serde"] }
sprs = "0.11"
nalgebra = "0.32"
parking_lot = "0.12"
lru = "0.12"

# Text processing
text_analysis = "0.3"
regex = "1.0"

# Utilities
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
dashmap = "5.5"
itertools = "0.12"
strum = { version = "0.25", features = ["derive"] }
derive_more = "0.99"
tap = "1.0"
rayon = "1.8"
num_cpus = "1.16"
instant-distance = "0.6"
moka = { version = "0.12", features = ["future"] }
dirs = "5.0"
csv = "1.3"
rand = "0.8"
tempfile = "3.8"

# CLI tools
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
indicatif = "0.17"
console = "0.15"
termcolor = "1.4"
reedline = "0.37"

# LLM integrations
ollama-rs = "0.2"
jsonfixer = "0.1"  # JSON repair for malformed LLM output

# HTTP client
ureq = { version = "2.12", features = ["json"] }

# JSON
json = "0.12"

# Other
chrono = { version = "0.4.38", default-features = false, features = ["serde", "clock", "std"] }  # Compatible with arrow
uuid = { version = "1.0", features = ["v4", "serde"] }

# Vector databases (optional, for persistent storage)
# NOTE: lancedb 0.22.2 uses arrow 56 and half ^2.6 (compatible with burn 0.18)
lancedb = "0.22.2"
arrow = "56"
arrow-array = "56"
arrow-schema = "56"

# ML frameworks (optional, for neural embeddings)
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }

# Persistence layer
surrealdb = { version = "2", features = ["kv-mem"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.rust-analyzer]
rustc_private = true
